--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -11,6 +11,7 @@ $color-unhovered-item: #a4a4a4;
 
 $color-accept: #0a8300;
 $color-decline: #a50606;
+$color-pending: #555555;
 
 // FONT VARIABLES
 $font-primary: "Nunito", sans-serif;
