--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -86,32 +86,29 @@ body {
 
 .homePage__container {
   display: grid;
-  grid-template-rows: 10vh 88vh 10vh;
+  grid-template-rows: 10vh 90vh;
   grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr));
   grid-template-areas:
     "navbar navbar navbar navbar"
-    "pickSection pickSection pickSection pickSection"
-    "footer footer footer footer";
+    "pickSection pickSection pickSection pickSection";
 }
 
 .loginPage__container {
   display: grid;
-  grid-template-rows: 10vh 80vh 10vh;
+  grid-template-rows: 10vh 90vh;
   grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr));
   grid-template-areas:
     "navbar navbar navbar navbar"
-    "loginSection loginSection loginSection loginSection"
-    "footer footer footer footer";
+    "loginSection loginSection loginSection loginSection";
 }
 
 .signupPage__container {
   display: grid;
-  grid-template-rows: 10vh 80vh 10vh;
+  grid-template-rows: 10vh 90vh;
   grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr));
   grid-template-areas:
     "navbar navbar navbar navbar"
-    "signupSection signupSection signupSection signupSection"
-    "footer footer footer footer";
+    "signupSection signupSection signupSection signupSection";
 }
 
 .userPage__container {
