--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -3,9 +3,9 @@
   grid-gap: 0.2rem;
   grid-area: navbar;
   grid-template-columns:
-    minmax(1rem, 1fr) minmax(min-content, 30rem) 2fr minmax(min-content, 10rem)
+    minmax(1rem, 1fr) minmax(min-content, 30rem) 2fr
     minmax(min-content, 10rem) minmax(min-content, 10rem) minmax(1rem, 1fr);
-  grid-template-areas: ". navbar_logo . navbar_alert navbar_login navbar_signup .";
+  grid-template-areas: ". navbar_logo . navbar_login navbar_signup .";
   border-bottom-width: 0.1rem;
   border-bottom-color: black;
   border-bottom-style: solid;
@@ -90,18 +90,6 @@
     justify-self: center;
     align-self: center;
     &__glyph {
-    }
-  }
-  &__alert {
-    grid-area: navbar_alert;
-    font-size: 3rem;
-    justify-self: end;
-    align-self: center;
-    &__glyph {
-      color: $color-unhovered-item;
-      &:hover {
-        color: $color-foreground-dark;
-      }
     }
   }
 }
